--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
             <h2 class="section-title" data-aos="fade-up">Learn From The Best</h2>
             <div class="faculty-grid">
                 <div class="faculty-card" data-aos="fade-up" data-aos-delay="100">
-                    <img src="/images/mayur.jpg" alt="Faculty 1" class="faculty-img">
+                    <img src="images/mayur.jpg" alt="Faculty 1" class="faculty-img">
                     <div class="faculty-info">
                         <h3 class="faculty-name">Mr. Mayur Vasave</h3>
                         <p class="faculty-exp">15+ Years Teaching Experience</p>
@@ -672,7 +672,7 @@
                     </div>
                 </div>
                 <div class="faculty-card" data-aos="fade-up" data-aos-delay="200">
-                    <img src="/images/aakar.jpg" alt="Faculty 2" class="faculty-img">
+                    <img src="images/aakar.jpg" alt="Faculty 2" class="faculty-img">
                     <div class="faculty-info">
                         <h3 class="faculty-name">Prof. Aakar gaykar</h3>
                         <p class="faculty-exp">12+ Years Teaching Experience</p>
@@ -680,7 +680,7 @@
                     </div>
                 </div>
                 <div class="faculty-card" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/images/akshat.jpeg" alt="Faculty 3" class="faculty-img">
+                    <img src="images/akshat.jpeg" alt="Faculty 3" class="faculty-img">
                     <div class="faculty-info">
                         <h3 class="faculty-name">Dr. Akshat Lohar</h3>
                         <p class="faculty-exp">18+ Years Teaching Experience</p>
@@ -728,22 +728,22 @@
             <div class="gallery-container" data-aos="fade-up">
                 <div class="gallery-slider" id="gallery-slider">
                     <div class="gallery-item">
-                        <img src="/images/img1.jpg" alt="Classroom 1">
+                        <img src="images/img1.jpg" alt="Classroom 1">
                     </div>
                     <div class="gallery-item">
-                        <img src="/images/img2.jpg" alt="Classroom 2">
+                        <img src="images/img2.jpg" alt="Classroom 2">
                     </div>
                     <div class="gallery-item">
-                        <img src="/images/img3.jpg" alt="Classroom 3">
+                        <img src="images/img3.jpg" alt="Classroom 3">
                     </div>
                     <div class="gallery-item">
-                        <img src="/images/img4.jpg" alt="Classroom 4">
+                        <img src="images/img4.jpg" alt="Classroom 4">
                     </div>
                     <div class="gallery-item">
-                        <img src="/images/img5.jpg" alt="Classroom 5">
+                        <img src="images/img5.jpg" alt="Classroom 5">
                     </div>
                     <div class="gallery-item">
-                        <img src="/images/img6.jpg" alt="Classroom 6">
+                        <img src="images/img6.jpg" alt="Classroom 6">
                     </div>
                 </div>
                 <div class="gallery-nav">
